orcbytecode: Fix parsing of 64 bit values from bytecode

The shift by 24 bits has to be casted already, otherwise we shift
into the sign bit which causes undefined behaviour.

Thanks to Edward Hervey for debugging this.

https://bugzilla.gnome.org/show_bug.cgi?id=698520